--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,8 +1,21 @@
 .card {
-  border: 2px solid #E92731;
-  width: 20%
+  width: 18rem;
+  height: 499px;
+  margin: 10px;
 }
 
-img {
+.card:hover {
+  text-decoration: underline;
+  color: #018994;
+}
+
+.card-poster {
   width: 100%;
+  height: 432px; 
+  box-shadow: 5px 3px 15px #018994;
+  border-radius: 8px;
+}
+
+.card-title{
+  margin: 10px;
 }
