--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,12 +1,13 @@
 .App {
-  background-color: #282c34;
+  background-color: #FFFFFF;
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px; */
+  /* align-items: center; */
+  /* justify-content: center;  */
+  /* font-size: calc(10px + 2vmin); */
+  /* color: white; */
 }
 
 
