--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 header {
   height: 100px;
-  background: white;
+  background: #E92731;
   color: black;
   display: flex;
   justify-content: space-between;
   flex-direction: row-reverse;
   align-items: flex-end;
-  padding: 3px;
+  padding: 10px;
 }
 
 .home-icon {
