--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+
 header {
   height: 100px;
   background: #E92731;
@@ -9,10 +11,12 @@ header {
   padding: 10px;
 }
 
-.home-icon {
-  width: 3rem;
-}
 
 h1 {
   margin: 0;
+  font-family: Rubik, sans-serif;
+}
+
+.home-icon {
+  width: 3rem;
 }
