--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,6 @@
 .card {
-  width: 18rem;
-  height: 499px;
-  margin: 10px;
+  width: 10rem;
+  margin: .8rem;
 }
 
 .card:hover {
@@ -11,7 +10,6 @@
 
 .card-poster {
   width: 100%;
-  height: 432px; 
   box-shadow: 5px 3px 15px #018994;
   border-radius: 8px;
 }
