--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
 .card {
   width: 10rem;
   margin: .8rem;
 }
 
 .card:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
   text-decoration: underline;
   color: #018994;
 }
@@ -15,5 +20,7 @@
 }
 
 .card-title{
-  margin-top: 10px;
+  margin-top: .5rem;
+  font-family: Rubik, sans-serif;
+  font-weight: 300;
 }
