--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,12 +10,20 @@ header {
   padding: .5rem;
 }
 
-
 h1 {
   margin: 0;
+  width: 60%;
   font-family: Rubik, sans-serif;
+  text-shadow: 1px 2px 10px #018994, 0 0 0.2em #fff;
 }
 
+
 .home-icon {
-  width: 2.2rem;
+  align-self: flex-start;
+  width: 2rem;
+}
+
+.home-icon:hover {
+  border: 3px solid #fff;
+  border-radius: 99%;
 }
