--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,13 +2,14 @@
 
 .card {
   width: 10rem;
+  height: 19rem;
   margin: .8rem;
 }
 
 .card:hover {
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
   text-decoration: underline;
   color: #018994;
 }
@@ -21,6 +22,13 @@
 
 .card-title{
   margin-top: .5rem;
+  text-align: center;
+  font-size: 5vw;
   font-family: Rubik, sans-serif;
   font-weight: 300;
+  height: 1.2rem;
+}
+
+.card-title:hover {
+  overflow: visible;
 }
