--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -5,7 +5,7 @@
   font-family: Rubik, sans-serif;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 1fr 4fr;
+  /* grid-template-rows: 1fr 4fr; */
   grid-template-areas: 
     "details details"
     "poster overview";
