--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -4,8 +4,7 @@
   margin: 1rem;
   font-family: Rubik, sans-serif;
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  /* grid-template-rows: 1fr 4fr; */
+  grid-template-columns: 2fr 4fr;
   grid-template-areas: 
     "details details"
     "poster overview";
@@ -52,21 +51,26 @@
 .info-container {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   width: 100%;
   font-size: .8rem;
 }
 
 .info-container h4 {
   margin-top: 0;
-  border-left: 3px solid black;
+  /* border-left: 3px solid black; */
   text-align: center;
   background: white;
   width: 100%;
 }
 
-.info-container h4:nth-of-type(1) {
-  border: 0;
+.info-container>h4:nth-of-type(1) {
   text-align: initial;
+}
+
+.genre-display {
+  border-right: 3px solid black;
+  border-left: 3px solid black;
 }
 
 .money-container {
@@ -74,11 +78,19 @@
   font-weight: 100;
 }
 
+.money-container>h4 {
+  margin-bottom: 0;
+}
+
+.money-container>h5 {
+  margin-top: 0;
+}
+
 .summary {
   width: 100%;
 }
 
-.summary p {
+.summary>p {
   font-weight: 100;
   
 }
