--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
 .single-film {
-  margin: 1rem;
+  margin: 7rem 1rem 1rem 1rem;
   font-family: Rubik, sans-serif;
   display: grid;
   grid-template-columns: 2fr 4fr;
@@ -59,7 +59,6 @@
 
 .info-container h4 {
   margin-top: 0;
-  /* border-left: 3px solid black; */
   text-align: center;
   background: white;
   width: 100%;
