--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -20,6 +20,7 @@
 .single-film h3 {
   font-size: 1rem;
   margin-top: 0;
+  margin-bottom: .2rem;
 }
 
 .film-details {
@@ -31,7 +32,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  margin-bottom: 1rem;
+  margin-bottom: .8rem;
 }
 
 .title {
@@ -59,6 +60,7 @@
 
 .info-container h4 {
   margin-top: 0;
+  margin-bottom: .5rem;
   text-align: center;
   background: white;
   width: 100%;
@@ -92,5 +94,6 @@
 
 .summary>p {
   font-weight: 100;
-
+  margin-top: 0;
+  margin-bottom: 0;
 }
