--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,7 +1,9 @@
 .movies-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  overflow: auto;
+  width: 90%;
   margin-top: 7rem;
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(150px, 1fr) );
+  grid-gap: 16px;
 }
+
+
