--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,14 +20,16 @@ h1 {
   text-shadow: 1px 2px 10px #018994, 0 0 0.2em #fff;
 }
 
-
 .home-icon {
   align-self: flex-start;
   width: 2rem;
   margin-right: 0.9rem;
 }
 
-/* .home-icon:hover {
-  border: 3px solid #fff;
-  border-radius: 99%;
-} */
+@media screen and (min-width: 1000px) {
+  .home-icon:hover {
+    border: 3px solid #fff;
+    border-radius: 99%;
+  }
+}
+
