--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -47,7 +47,7 @@
 .rating {
   align-self: flex-end;
   margin: 0;
-
+  /* font-size: 5vw; */
 }
 
 .overview {
@@ -60,19 +60,29 @@
   align-items: flex-end;
   width: 100%;
   font-size: .8rem;
+  max-height: 30px;
+  column-gap: 1rem;
+  text-align: center;
 }
 
 .info-container h4 {
-  margin-top: 0;
   margin-bottom: .5rem;
-  text-align: center;
   background: white;
   width: 100%;
-  /* max-width: px; */
+  height: 100%;
 }
 
 .info-container>h4:nth-of-type(1) {
   text-align: initial;
+}
+
+.info-container>h4:nth-of-type(2) {
+  padding-left: 5px;
+  padding-right: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
 }
 
 .genre-display {
@@ -116,5 +126,9 @@
     grid-template-columns: 330px 1fr;
     margin-left: 3rem;
     margin-right: 3rem;
+  }
+
+  .info-container {
+    max-width: 800px;
   }
 }
