--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -26,7 +26,6 @@
 
 .film-details {
   grid-area: details;
-
 }
 
 .film-title-container {
@@ -64,22 +63,19 @@
   height: 100%;
 }
 
-.info-container>h4:nth-of-type(1) {
+.info-container>h4:nth-child(1) {
   text-align: initial;
 }
 
-.info-container>h4:nth-of-type(2) {
+.genre-display {
+  border-right: 3px solid black;
+  border-left: 3px solid black;
   padding-left: 5px;
   padding-right: 5px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
   width: 100%;
-}
-
-.genre-display {
-  border-right: 3px solid black;
-  border-left: 3px solid black;
 }
 
 .money-container {
@@ -105,9 +101,13 @@
   margin-bottom: 0;
 }
 
+.summary-headline {
+  font-size: 1.17rem;
+  margin-top: 0;
+}
+
 @media screen and (min-width: 400px) {
   .single-film {
-    
     margin-left: 2rem;
     margin-right: 2rem;
   }
