--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -10,8 +10,7 @@
     "poster overview";
   grid-gap: 10px;
   text-align: initial;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  max-width: 1200px;
 }
 
 .single-film img {
@@ -50,7 +49,7 @@
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
-  font-size: .8rem;
+  font-size: 1.2rem;
   max-height: 30px;
   column-gap: 1rem;
   text-align: center;
@@ -61,6 +60,9 @@
   background: white;
   width: 100%;
   height: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .info-container>h4:nth-child(1) {
@@ -72,14 +74,11 @@
   border-left: 3px solid black;
   padding-left: 5px;
   padding-right: 5px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
   width: 100%;
 }
 
 .money-container {
-  font-size: 11px;
+  font-size: 1.2rem;
   font-weight: 100;
 }
 
@@ -102,8 +101,9 @@
 }
 
 .summary-headline {
-  font-size: 1.17rem;
+  font-size: 2rem;
   margin-top: 0;
+  margin-bottom: 0.8rem;
 }
 
 @media screen and (min-width: 400px) {
