--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
+.nav {
+  color: black;
+  text-decoration: none;
+}
+
 .card {
   height: 19rem;
 }
@@ -18,6 +23,7 @@
   font-family: Rubik, sans-serif;
   font-weight: 500;
   height: 1.2rem;
+
 }
 
 @media screen and (min-width: 1024px) {
