--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -3,14 +3,18 @@
 .single-film {
   margin: 7rem 1rem 1rem 1rem;
   font-family: Rubik, sans-serif;
+  text-align: initial;
+  max-width: 1200px;
   display: grid;
   grid-template-columns: 2fr 4fr;
   grid-template-areas:
     "details details"
     "poster overview";
   grid-gap: 10px;
-  text-align: initial;
-  max-width: 1200px;
+}
+
+.film-details {
+  grid-area: details;
 }
 
 .single-film img {
@@ -23,10 +27,7 @@
   grid-area: overview;
 }
 
-.film-details {
-  grid-area: details;
-}
-
+/* Styling for title area */
 .film-title-container {
   display: flex;
   justify-content: space-between;
@@ -44,24 +45,25 @@
   margin: 0;
 }
 
+/* Styling for runtime, genres, and release date */
 .info-container {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  width: 100%;
-  font-size: 1.2rem;
-  max-height: 30px;
   column-gap: 1rem;
+  width: 100%;
+  max-height: 30px;
+  font-size: 1.2rem;
   text-align: center;
 }
 
 .info-container h4 {
-  margin-bottom: .5rem;
   background: white;
+  margin-bottom: .5rem;
   width: 100%;
   height: 100%;
-  text-overflow: ellipsis;
   overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
@@ -70,26 +72,14 @@
 }
 
 .genre-display {
+  width: 100%;
   border-right: 3px solid black;
   border-left: 3px solid black;
   padding-left: 5px;
   padding-right: 5px;
-  width: 100%;
 }
 
-.money-container {
-  font-size: 1.2rem;
-  font-weight: 100;
-}
-
-.money-container>h4 {
-  margin-bottom: 0;
-}
-
-.money-container>h5 {
-  margin-top: 0;
-}
-
+/* Styling for the summary section */
 .summary {
   width: 100%;
 }
@@ -104,6 +94,20 @@
   font-size: 2rem;
   margin-top: 0;
   margin-bottom: 0.8rem;
+}
+
+.money-container {
+  font-size: 1.2rem;
+  font-weight: 100;
+}
+
+/* Styling for the financial info at the bottom */
+.money-container>h4 {
+  margin-bottom: 0;
+}
+
+.money-container>h5 {
+  margin-top: 0;
 }
 
 @media screen and (min-width: 400px) {
